@@ -82,7 +82,6 @@ import org.sosy_lab.cpachecker.cpa.arg.path.ARGPath;
 import org.sosy_lab.cpachecker.cpa.automaton.Automaton;
 import org.sosy_lab.cpachecker.cpa.automaton.AutomatonParser;
 import org.sosy_lab.cpachecker.cpa.callstack.CallstackStateEqualsWrapper;
-import org.sosy_lab.cpachecker.cpa.formulaslicing.LoopTransitionFinder;
 import org.sosy_lab.cpachecker.exceptions.CPAException;
 import org.sosy_lab.cpachecker.exceptions.CPATransferException;
 import org.sosy_lab.cpachecker.util.AbstractStates;
@@ -404,8 +403,7 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
         PredicateAbstractState predState = PredicateAbstractState.getPredicateState(state);
         argForPathFormulaBasedGeneration.add(
             Pair.of(predState.getAbstractionFormula().getBlockFormula(), node));
-      } else if (!node.equals(
-          extractLocation(abstractionStatesTrace.get(abstractionStatesTrace.size() - 1)))) {
+      } else if (!node.equals(extractLocation(abstractionStatesTrace.getLast()))) {
         argForPathFormulaBasedGeneration.add(Pair.of(null, node));
       }
     }
@@ -437,7 +435,7 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
         boolean wasSuccessful = false;
 
         switch (generation) {
-          case PF_CNF_KIND:
+          case PF_CNF_KIND -> {
             for (Pair<PathFormula, CFANode> pair : argForPathFormulaBasedGeneration) {
               if (pair.getFirst() != null) {
                 wasSuccessful =
@@ -448,9 +446,8 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
                 addResultToCache(bfmgr.makeTrue(), pair.getSecond());
               }
             }
-            break;
-
-          case PF_INDUCTIVE_WEAKENING:
+          }
+          case PF_INDUCTIVE_WEAKENING -> {
             for (Pair<PathFormula, CFANode> pair : argForPathFormulaBasedGeneration) {
               if (pair.getFirst() != null) {
                 wasSuccessful =
@@ -461,16 +458,11 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
                 addResultToCache(bfmgr.makeTrue(), pair.getSecond());
               }
             }
-            break;
-
-          case RF_INTERPOLANT_KIND:
-            wasSuccessful =
-                findInvariantInterpolants(
-                    allStatesTrace, abstractionStatesTrace, invariantShutdown.getNotifier());
-            break;
-
-          default:
-            throw new AssertionError("Unhandled case statement");
+          }
+          case RF_INTERPOLANT_KIND ->
+              wasSuccessful =
+                  findInvariantInterpolants(
+                      allStatesTrace, abstractionStatesTrace, invariantShutdown.getNotifier());
         }
 
         if (wasSuccessful) {
@@ -598,9 +590,14 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
     try {
       stats.pfKindTime.start();
 
-      Set<BooleanFormula> conjuncts =
-          Collections3.transformedImmutableSetCopy(
-              semiCNFConverter.toLemmasInstantiated(pPathFormula, fmgr), fmgr::uninstantiate);
+      final Set<BooleanFormula> conjuncts;
+      try {
+        conjuncts =
+            Collections3.transformedImmutableSetCopy(
+                semiCNFConverter.toLemmasInstantiated(pPathFormula, fmgr), fmgr::uninstantiate);
+      } catch (SolverException e) {
+        throw new CPAException("Solver failed with exception", e);
+      }
 
       final Map<String, BooleanFormula> formulaToRegion = new HashMap<>();
       StaticCandidateProvider candidateGenerator =
@@ -714,7 +711,7 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
       List<Pair<BooleanFormula, CFANode>> invariants = new ArrayList<>();
       for (ARGState s : abstractionStatesTrace) {
         // the last one will always be false, we don't need it here
-        if (!Objects.equals(s, abstractionStatesTrace.get(abstractionStatesTrace.size() - 1))) {
+        if (!Objects.equals(s, abstractionStatesTrace.getLast())) {
           CFANode location = extractLocation(s);
           Optional<CallstackStateEqualsWrapper> callstack = extractOptionalCallstackWraper(s);
           PredicateAbstractState pas = PredicateAbstractState.getPredicateState(s);
@@ -899,7 +896,7 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
       return candidates.iterator();
     }
 
-    public boolean hasFoundInvariants() {
+    boolean hasFoundInvariants() {
       return !foundInvariants.isEmpty();
     }
 
@@ -908,13 +905,13 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
       return new HashSet<>(foundInvariants);
     }
 
-    public List<Pair<BooleanFormula, CFANode>> retrieveConfirmedInvariants() {
+    List<Pair<BooleanFormula, CFANode>> retrieveConfirmedInvariants() {
       FluentIterable<CandidateInvariant> found = from(foundInvariants);
       List<Pair<BooleanFormula, CFANode>> invariants = new ArrayList<>();
       for (final CFANode node : abstractionNodes) {
         // we don't want the last node to be here, as the invariant will always
         // be FALSE
-        if (node.equals(abstractionNodes.get(abstractionNodes.size() - 1))) {
+        if (node.equals(abstractionNodes.getLast())) {
           continue;
         }
         invariants.add(
@@ -955,7 +952,7 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
 
     private final LogManager logger;
 
-    public OnlyWarningsLogmanager(LogManager pLogger) {
+    OnlyWarningsLogmanager(LogManager pLogger) {
       logger = pLogger;
     }
 
