@@ -89,15 +89,14 @@ public class SignTransferRelation
     ImmutableMap.Builder<String, Sign> mapBuilder = ImmutableMap.builder();
     for (int i = 0; i < pParameters.size(); i++) {
       AExpression exp = pArguments.get(i);
-      if (!(exp instanceof CRightHandSide)) {
+      if (!(exp instanceof CRightHandSide cRightHandSide)) {
         throw new UnrecognizedCodeException("Unsupported code found", pCfaEdge);
       }
       String scopedVarId =
           getScopedVariableNameForNonGlobalVariable(
               pParameters.get(i).getName(), pCalledFunctionName);
       mapBuilder.put(
-          scopedVarId,
-          ((CRightHandSide) exp).accept(new SignCExpressionVisitor(pCfaEdge, state, this)));
+          scopedVarId, cRightHandSide.accept(new SignCExpressionVisitor(pCfaEdge, state, this)));
     }
     ImmutableMap<String, Sign> argumentMap = mapBuilder.buildOrThrow();
     logger.log(
@@ -149,7 +148,7 @@ public class SignTransferRelation
     CExpression identifier;
     Sign value;
 
-    public IdentifierValuePair(CExpression pIdentifier, Sign pValue) {
+    IdentifierValuePair(CExpression pIdentifier, Sign pValue) {
       identifier = pIdentifier;
       value = pValue;
     }
@@ -191,12 +190,9 @@ public class SignTransferRelation
 
   private Optional<IdentifierValuePair> evaluateAssumption(
       CExpression pIdExp, BinaryOperator pOp, Sign pResultSign, boolean pIdentIsLeft) {
-    boolean equalZero = false;
     switch (pOp) {
-      case GREATER_EQUAL:
-        equalZero = pResultSign.covers(Sign.ZERO);
-      // $FALL-THROUGH$
-      case GREATER_THAN:
+      case GREATER_EQUAL, GREATER_THAN -> {
+        boolean equalZero = (pOp == BinaryOperator.GREATER_EQUAL) && pResultSign.covers(Sign.ZERO);
         if (pIdentIsLeft) {
           if (Sign.PLUS0.covers(pResultSign)) { // x > (0)+
             return Optional.of(new IdentifierValuePair(pIdExp, equalZero ? Sign.PLUS0 : Sign.PLUS));
@@ -207,11 +203,10 @@ public class SignTransferRelation
                 new IdentifierValuePair(pIdExp, equalZero ? Sign.MINUS0 : Sign.MINUS));
           }
         }
-        break;
-      case LESS_EQUAL:
-        equalZero = pResultSign.covers(Sign.ZERO);
-      // $FALL-THROUGH$
-      case LESS_THAN:
+      }
+      case LESS_EQUAL, LESS_THAN -> {
+        boolean equalZero = (pOp == BinaryOperator.LESS_EQUAL) && pResultSign.covers(Sign.ZERO);
+
         if (pIdentIsLeft) { // x < (0)-
           if (Sign.MINUS0.covers(pResultSign)) {
             return Optional.of(
@@ -222,16 +217,18 @@ public class SignTransferRelation
             return Optional.of(new IdentifierValuePair(pIdExp, equalZero ? Sign.PLUS0 : Sign.PLUS));
           }
         }
-        break;
-      case EQUALS:
+      }
+      case EQUALS -> {
         return Optional.of(new IdentifierValuePair(pIdExp, pResultSign));
-      case NOT_EQUALS:
+      }
+      case NOT_EQUALS -> {
         if (pResultSign == Sign.ZERO) {
           return Optional.of(new IdentifierValuePair(pIdExp, Sign.PLUSMINUS));
         }
-        break;
-      default:
+      }
+      default -> {
         // nothing to do here
+      }
     }
     return Optional.empty();
   }
@@ -266,14 +263,15 @@ public class SignTransferRelation
       return Optional.empty();
     }
     if (result.size() == 1) {
-      return Optional.of(result.get(0));
+      return Optional.of(result.getFirst());
     }
     try {
-      Sign leftResultSign = result.get(0).accept(new SignCExpressionVisitor(pCFAEdge, state, this));
+      Sign leftResultSign =
+          result.getFirst().accept(new SignCExpressionVisitor(pCFAEdge, state, this));
       Sign rightResultSign =
           result.get(1).accept(new SignCExpressionVisitor(pCFAEdge, state, this));
       if (leftResultSign.covers(rightResultSign)) {
-        return Optional.of(result.get(0));
+        return Optional.of(result.getFirst());
       } else {
         return Optional.of(result.get(1));
       }
@@ -287,11 +285,11 @@ public class SignTransferRelation
       CAssumeEdge pCfaEdge, CExpression pExpression, boolean pTruthAssumption)
       throws CPATransferException { // TODO more complex things
     // Analyse only expressions of the form x op y
-    if (!(pExpression instanceof CBinaryExpression)) {
+    if (!(pExpression instanceof CBinaryExpression cBinaryExpression)) {
       return state;
     }
     Optional<IdentifierValuePair> result =
-        evaluateAssumption((CBinaryExpression) pExpression, pTruthAssumption, pCfaEdge);
+        evaluateAssumption(cBinaryExpression, pTruthAssumption, pCfaEdge);
     if (result.isPresent()) {
       logger.log(
           Level.FINE,
@@ -323,10 +321,10 @@ public class SignTransferRelation
   @Override
   protected SignState handleDeclarationEdge(ADeclarationEdge pCfaEdge, ADeclaration pDecl)
       throws CPATransferException {
-    if (!(pDecl instanceof AVariableDeclaration)) {
+    if (!(pDecl instanceof AVariableDeclaration decl)) {
       return state;
     }
-    AVariableDeclaration decl = (AVariableDeclaration) pDecl;
+
     String scopedId;
     if (decl.isGlobal()) {
       scopedId = decl.getName();
@@ -336,9 +334,9 @@ public class SignTransferRelation
     AInitializer init = decl.getInitializer();
     logger.log(Level.FINE, "Declaration: " + scopedId);
     // type x = expression;
-    if (init instanceof AInitializerExpression) {
+    if (init instanceof AInitializerExpression aInitializerExpression) {
       return handleAssignmentToVariable(
-          state, scopedId, ((AInitializerExpression) init).getExpression(), pCfaEdge);
+          state, scopedId, aInitializerExpression.getExpression(), pCfaEdge);
     }
     // type x;
     // since it is C, we assume it may have any value here
@@ -349,8 +347,8 @@ public class SignTransferRelation
   protected SignState handleStatementEdge(AStatementEdge pCfaEdge, AStatement pStatement)
       throws CPATransferException {
     // expression is a binary expression e.g. a = b.
-    if (pStatement instanceof AAssignment) {
-      return handleAssignment((AAssignment) pStatement, pCfaEdge);
+    if (pStatement instanceof AAssignment aAssignment) {
+      return handleAssignment(aAssignment, pCfaEdge);
     }
 
     // only expression expr; does not change state
@@ -385,11 +383,10 @@ public class SignTransferRelation
     }
 
     // x[index] = ..,
-    if (left instanceof CArraySubscriptExpression) {
+    if (left instanceof CArraySubscriptExpression cArraySubscriptExpression) {
       // currently only overapproximate soundly and assume any value
       return state.assignSignToVariable(
-          getScopedVariableName(
-              ((CArraySubscriptExpression) left).getArrayExpression(), functionName),
+          getScopedVariableName(cArraySubscriptExpression.getArrayExpression(), functionName),
           Sign.ALL);
     }
     throw new UnrecognizedCodeException("left operand has to be an id expression", edge);
